[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolvedvelocities"
version = "1.0.0"
dependencies = [
    "requests",
    "importlib-resources; python_version<='3.8'",
    "importlib-metadata; python_version<'3.8'",
    "numpy >= 1.16",
    "matplotlib >= 2.2.4",
    "tables >= 3.3.0",
    "scipy >= 1.2",
    "apexpy >= 1.1",
    "pymap3d",
    "marppy",
]
description = "Tool for resolving 3D plasma drift from AMISR LoS velocity"
readme = "README.md"
keywords = ["velocity", "ionosphere", "plasma drift", "AMISR"]
authors = [
    {name = "M. Nicolls"},
    {name = "L. Lamarche", email="leslie.lamarche@sri.com"},
    {name = "A. Reimer"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English"
]


[project.urls]
Repository = "https://github.com/amisr/resolvedvelocities"
Documentation = "https://resolvedvelocities.readthedocs.io/en/latest/"
Issues = "https://github.com/amisr/resolvedvelocities/issues"


[project.scripts]
resolvedvelocities-lat = "resolvedvelocities.ResolveVectorsLat:main"
resolvedvelocities-alt = "resolvedvelocities.ResolveVectorsAlt:main"


