[metadata]
name = resolvedvelocities
version = attr: resolvedvelocities.__version__
description = Tool for resolving 3D plasma drift from AMISR LoS velocity
long_description = file: README.rst, LICENSE.rst
keywords = velocity, ionosphere, plasma drift, AMISR
license = GNU General Public License v3.0
author = M. Nicolls, L. Lamarche, A. Reimer
author_email = leslie.lamarche@sri.com
url = https://github.com/amisr/resolvedvelocities
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2.0.0 - Release
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    importlib-metadata; python_version<"3.8"
    numpy >= 1.16
    matplotlib >= 2.2.4
    tables >= 3.3.0
    scipy >= 1.2
    pymap3d
    apexpy

[options.package_data]
resolvedvelocities = example_config.ini

[options.entry_points]
console_scripts =
    resolvedvelocities-lat=resolvedvelocities.ResolveVectorsLat:main
    resolvedvelocities-alt=resolvedvelocities.ResolveVectorsAlt:main

; [options.extras_require]
; pdf = ReportLab>=1.2; RXP
; rest = docutils>=0.3; pack ==1.1, ==1.3

; [options.packages.find]
; exclude =
;     examples*
;     tools*
;     docs*
;     my_package.tests*
